<resources>
    <string name="app_name">Cabby</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>

    <string name="my_information">My Information</string>
    <string name="fav_routes">Favourite routes</string>
    <string name="statistics">Statistics</string>
    <string name="sign_out">Sign out</string>
    <string name="reports">Reports</string>
    <string name="name_text">Name</string>
    <string name="surname_text">Surname</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in_dialog">Already have an account?</string>
    <string name="date_label_text">Date: </string>
    <string name="time_label_text">Time: </string>
    <string name="from_label_text">From: </string>
    <string name="to_label_text">To: </string>


    <string name="menu_drawer_open">Drawer open</string>
    <string name="menu_drawer_close">Drawer close</string>
    <string name="nav_home">Home</string>
    <string name="nav_inbox">Inbox</string>
    <string name="nav_ride_history">Ride History</string>
    <string name="nav_profile">Profile</string>
    <string name="offline_driver">Offline</string>
    <string name="online_driver">Online</string>
    <string name="driver_on_ride_title">Driver: </string>
    <string name="car_type">Car type: </string>
    <string name="rate_btn">Rate</string>
    <string name="passengers">Passengers:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>