<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="210dp"
        android:layout_height="70dp"
        android:hint="@string/register"
        android:textColorHint="@color/white"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="65dp"
        android:textSize="54dp"
        android:textStyle="bold">
    </TextView>

    <EditText
        android:layout_below="@id/register_title"
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="@string/name_text"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:textColorHint="@color/text_view_color"
        android:background="@drawable/textview_border"
        android:padding="4dp"
        android:drawableLeft="@drawable/user_icon"
        android:drawablePadding="3dp">
    </EditText>

    <EditText
        android:layout_below="@id/register_name"
        android:id="@+id/register_surname"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="@string/surname_text"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:textColorHint="@color/text_view_color"
        android:background="@drawable/textview_border"
        android:padding="4dp"
        android:drawableLeft="@drawable/user_icon"
        android:drawablePadding="3dp">
    </EditText>

    <EditText
        android:layout_below="@id/register_surname"
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="@string/email"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:textColorHint="@color/text_view_color"
        android:background="@drawable/textview_border"
        android:padding="4dp"
        android:drawableLeft="@drawable/envelope_closed"
        android:drawableTint="@color/text_view_color"
        android:drawablePadding="3dp">
    </EditText>

    <EditText
        android:layout_below="@id/register_email"
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="@string/phone"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:textColorHint="@color/text_view_color"
        android:background="@drawable/textview_border"
        android:padding="4dp"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="3dp">
    </EditText>

    <EditText
        android:layout_below="@id/register_phone"
        android:id="@+id/register_address"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="@string/address"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:textColorHint="@color/text_view_color"
        android:background="@drawable/textview_border"
        android:padding="4dp"
        android:drawableLeft="@drawable/address"
        android:drawableTint="@color/text_view_color"
        android:drawablePadding="3dp">
    </EditText>

    <EditText
        android:layout_below="@id/register_address"
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="@string/password"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:textColorHint="@color/text_view_color"
        android:background="@drawable/textview_border"
        android:padding="4dp"
        android:drawableLeft="@drawable/lock_close"
        android:drawablePadding="3dp">
    </EditText>

    <EditText
        android:layout_below="@id/register_password"
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="@string/confirm_password"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:textColorHint="@color/text_view_color"
        android:background="@drawable/textview_border"
        android:padding="4dp"
        android:drawableLeft="@drawable/lock_close"
        android:drawablePadding="3dp">
    </EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_below="@+id/register_confirm_password"
        android:id="@+id/register"
        android:text="@string/register"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/grey"
        android:background="@drawable/button_radius"
        android:textSize="30sp"
        android:textAllCaps="false">
    </androidx.appcompat.widget.AppCompatButton>



    <LinearLayout
        android:id="@+id/sign_in_dialog"
        android:orientation="horizontal"
        android:layout_below="@id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/sign_in_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_dialog"
            android:textColorHint="@color/white">
        </TextView>

        <TextView
            android:id="@+id/sign_in_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in"
            android:textColorHint="@color/white"
            android:layout_marginStart="4dp"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>

</RelativeLayout>