<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PassengerRideDetailsActivity"
    android:background="@color/dark_background">

    <ImageView
        android:id="@+id/passenger_map_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/user_icon"
        android:layout_marginTop="70dp">
    </ImageView>

    <RelativeLayout
        android:id="@+id/passenger_ride_data_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passenger_map_image"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/passenger_driver_detail_box">
            <TextView
                android:id="@+id/passenger_driver_detail_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_on_ride_title"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="20dp"
                >
            </TextView>
            <TextView
                android:id="@+id/passenger_driver_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_on_ride_title"
                android:textColor="@color/text_color"
                android:textSize="15dp"
                android:layout_marginLeft="15dp"
                >
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/passenger_from_detail_box"
            android:layout_below="@id/passenger_driver_detail_box"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/passenger_from_detail_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_label_text"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="20dp"
                >
            </TextView>
            <TextView
                android:id="@+id/passenger_from_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_label_text"
                android:textColor="@color/text_color"
                android:textSize="15dp"
                android:layout_marginLeft="15dp"
                >
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/passenger_to_detail_box"
            android:layout_below="@id/passenger_from_detail_box"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/passenger_to_detail_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_label_text"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="20dp"
                >
            </TextView>
            <TextView
                android:id="@+id/passenger_to_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_label_text"
                android:textColor="@color/text_color"
                android:textSize="15dp"
                android:layout_marginLeft="15dp"
                >
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/passenger_date_detail_box"
            android:layout_below="@id/passenger_to_detail_box"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/passenger_date_detail_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_label_text"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="20dp"
                >
            </TextView>
            <TextView
                android:id="@+id/passenger_date_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_label_text"
                android:textColor="@color/text_color"
                android:textSize="15dp"
                android:layout_marginLeft="15dp"
                >
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/passenger_time_detail_box"
            android:layout_below="@id/passenger_date_detail_box"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/passenger_time_detail_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_label_text"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="20dp"
                >
            </TextView>
            <TextView
                android:id="@+id/passenger_time_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_label_text"
                android:textColor="@color/text_color"
                android:textSize="15dp"
                android:layout_marginLeft="15dp"
                >
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/passenger_car_type_detail_box"
            android:layout_below="@id/passenger_time_detail_box"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/passenger_car_type_detail_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_type"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="20dp"
                >
            </TextView>
            <TextView
                android:id="@+id/passenger_car_type_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_type"
                android:textColor="@color/text_color"
                android:textSize="15dp"
                android:layout_marginLeft="15dp"
                >
            </TextView>

        </LinearLayout>



    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/passenger_rating_btn"
        android:text="@string/rate_btn"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/grey"
        android:background="@drawable/button_radius"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:layout_below="@id/passenger_ride_data_box">
    </androidx.appcompat.widget.AppCompatButton>

</RelativeLayout>